# advent-rs

./: .pre-commit-config.yaml  Cargo.toml  README.md
.git-hooks/: pre-commit
2015/aoc15-01/: Cargo.toml
2015/aoc15-02/: Cargo.toml
2015/aoc15-03/: Cargo.toml
2015/aoc15-04/: Cargo.toml
2015/aoc15-05/: Cargo.toml
2015/aoc15-06/: Cargo.toml
2015/aoc15-07/: Cargo.toml
2015/aoc15-08/: Cargo.toml
2015/aoc15-09/: Cargo.toml
2015/aoc15-10/: Cargo.toml
2015/aoc15-11/: Cargo.toml
2015/aoc15-12/: Cargo.toml
2015/aoc15-13/: Cargo.toml
2015/aoc15-14/: Cargo.toml
2015/aoc15-15/: Cargo.toml
2016/aoc16-01/: Cargo.toml
2016/aoc16-02/: Cargo.toml
2020/aoc20-01/: Cargo.toml
2020/aoc20-02/: Cargo.toml
2020/aoc20-03/: Cargo.toml
2020/aoc20-04/: Cargo.toml
2020/aoc20-05/: Cargo.toml
2020/aoc20-06/: Cargo.toml
2020/aoc20-07/: Cargo.toml
2020/aoc20-08/: Cargo.toml
2020/aoc20-09/: Cargo.toml
2020/aoc20-10/: Cargo.toml
2020/aoc20-11/: Cargo.toml
2020/aoc20-12/: Cargo.toml
2020/aoc20-13/: Cargo.toml
2020/aoc20-14/: Cargo.toml
2020/aoc20-15/: Cargo.toml
2020/aoc20-16/: Cargo.toml
2020/aoc20-17/: Cargo.toml
2020/aoc20-18/: Cargo.toml
2020/aoc20-19/: Cargo.toml
2020/aoc20-20/: Cargo.toml
2020/aoc20-21/: Cargo.toml
2020/aoc20-22/: Cargo.toml
2020/aoc20-23/: Cargo.toml
2020/aoc20-24/: Cargo.toml
2020/aoc20-25/: Cargo.toml
2021/aoc21-05/: Cargo.toml
2021/aoc21-07/: Cargo.toml
2021/aoc21-08/: Cargo.toml
2021/aoc21-09/: Cargo.toml
builder/: Cargo.toml  template.rs
crates/2016/aoc16-14/: Cargo.toml
crates/2016/aoc16-14/src/: main.rs
crates/2023/aoc23-23/: Cargo.toml
crates/2023/aoc23-23/src/: main.rs
crates/hymns/: Cargo.toml
crates/hymns/src/: bfs.rs  default_map.rs  formatting.rs  geom.rs  grid.rs  input.rs  invert_map.rs  lib.rs  math.rs  more_itertools.rs  pathfinding.rs  runner.rs  vec2d.rs  vector2.rs  vector3.rs
hymns/: Cargo.toml
(+384 files in other folders)
