[package]
name = "hymns"
version = "0.1.0"
authors = ["Justin Prieto <justin@prieto.nyc>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = { workspace = true }
num-traits = "0"
priority-queue = "1"

[lints]
workspace = true
