[package]
name = "aoc16-14"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
smallvec = { version = "1", features = ["union", "const_generics", "const_new"] }
md5 = "0"
rayon = { workspace = true }
hashbrown = { workspace = true }
hymns = { workspace = true }
itertools = { workspace = true }
