[package]
name = "aoc23-23"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
hymns = { workspace = true }
itertools = { workspace = true }
regex = { workspace = true }
rustc-hash = "1"
